test_regress/t/t_func_const3_bad.out
%Warning-WIDTHCONCAT: t/t_func_const3_bad.v:12:28: More than a 8k bit replication is probably wrong: 9000
                                                 : ... In instance t.b9k.c9
   localparam SOMEP = {BITS{1'b0}};
                           ^
                      ... Use "/* verilator lint_off WIDTHCONCAT */" and lint_on around source to disable this message.
%Error: Exiting due to
